@@ -107,6 +107,10 @@ fieldset.paypal {
     color: #106326;
 }
 
+.code {
+    color: #108826;
+}
+
 .shorthelp {
     font-weight: bold;
 }
