@@ -1,6 +1,7 @@
 <pre>
 2007-07-02:
 	* version 0.5
+	* files in ~/.vimperator/plugin/ are auto-sourced
 	* :winopen support (multiple windows still very very experimental)
 	* 'activate' option implemented
 	* search enginges which use POST instead of GET work now
